...
            android:layout_height="?attr/actionBarSize"
            android:transitionName="@string/transition_search_bar"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:navigationIconTint="?attr/primary_color">

            <LinearLayout
                android:id="@+id/search_lang_button_container"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <org.wikipedia.views.CabSearchView
...
                    android:inputType="text"
                    app:searchIcon="@null"
                    app:searchHintIcon="@null"
                    app:defaultQueryHint="@string/search_hint" />

                <org.wikipedia.views.LangCodeView
                    android:id="@+id/search_lang_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/preference_title_language"
                    android:padding="8dp"
                    android:layout_marginEnd="4dp"
...
