<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search_language"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_hint_search_languages"
        app:iconTint="?attr/primary_color"
        app:showAsAction="ifRoom" />
</menu>