<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/horizontal_scroll_languages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:requiresFadingEdge="horizontal"
        android:fadingEdgeLength="24dp"
        android:background="?attr/paper_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/more_languages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorColor="?attr/progressive_color"
        app:tabIndicatorHeight="2dp"
        app:tabMaxWidth="0dp"
        app:tabMode="scrollable"
        app:tabPaddingBottom="8dp"
        app:tabPaddingEnd="8dp"
        app:tabPaddingStart="8dp"
        app:tabPaddingTop="8dp"
        app:tabSelectedTextColor="?attr/progressive_color" />

    <Button
        android:id="@+id/more_languages"
        style="@style/App.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:minWidth="0dp"
        android:text="@string/more_language_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="More" />

</merge>