...
    <string name="nav_item_suggested_edits">Edits</string>
    <string name="nav_item_activity">Activity</string>
    <string name="nav_item_more">More</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_contribute">Contribute</string>
...
    <string name="menu_page_find_in_page">Find in article</string>
    <string name="menu_page_add_to_watchlist">Add to Watchlist</string>
    <string name="menu_page_watch">Watch</string>
    <string name="menu_page_unwatch">Unwatch</string>
    <string name="menu_page_view_talk">View talk page</string>
    <string name="menu_page_talk_page">Talk page</string>
...
    <string name="login_email_auth_other_workflow_error_msg">Email verification required! Please login from the main screen, and enter your email verification code.</string>
    <string name="login_background_error_msg">Unable to re-login. Please go back to the main screen and log in manually.</string>
    <string name="onboarding_card_login">Log in</string>
    <string name="page_editing_login">Log in</string>
    <string name="reading_lists_sync_login">Log in</string>
...
    <string name="temp_account_anon_dialog_body"><![CDATA[Once you make an edit, a <b>temporary account</b> will be created for you to protect your privacy. <a href="%1$s">Learn more</a>.<br /><br /><a href="https://#login">Log in</a> or <a href="https://#createaccount">create an account</a> to get credit for future edits and to access other features.]]></string>
    <string name="temp_account_temp_dialog_body"><![CDATA[Your edit will be attributed to %1$s. Your IP address will be visible to administrators.<br /><br />If you <a href="https://#login">log in</a> or <a href="https://#createaccount">create an account</a>, your edits will be attributed to a name you choose, among other benefits.]]></string>
    <string name="temp_account_dialog_ok">Got it</string>
    <string name="temp_account_using_title">You are using a temporary account</string>
    <string name="temp_account_dialog_discard">Discard changes and log in</string>
...
    <string name="suggested_edits_feed_card_add_description_button">Add article description</string>
    <string name="suggested_edits_feed_card_add_translation_in_language_button">Add article description (%s)</string>
    <string name="suggested_edits_tasks_onboarding_get_started">Get started</string>
    <string name="suggested_edits_image_preview_dialog_caption_in_language_title">Image caption (%s)</string>
    <string name="suggested_edits_image_preview_dialog_image">Image</string>
...
    <string name="onboarding_data_privacy_title">Data &amp; Privacy</string>
    <string name="onboarding_data_privacy_text"><![CDATA[We believe that you should not have to provide personal information to participate in the free knowledge movement. Usage data collected for this app is anonymous.<br/><br/>Learn more about our <a href="#privacy">privacy policy</a> and <a href="#termsOfUse">terms of use</a>.]]></string>
    <string name="onboarding_analytics_switch_title">Send usage data</string>
    <string name="onboarding_got_it">Got it</string>
    <string name="onboarding_multilingual_secondary_text">We\'ve found the following on your device:</string>
...

    <!-- Watchlist -->
    <string name="watchlist_page_add_to_watchlist_snackbar_action">Change</string>
    <string name="watchlist_page_add_to_watchlist_snackbar_period_permanently">permanently</string>
    <string name="watchlist_page_add_to_watchlist_snackbar_period_for_one_week">1 week</string>
...
