<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <org.wikipedia.feed.view.CardHeaderView
        android:id="@+id/view_featured_article_card_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <org.wikipedia.views.WikiCardView
        android:id="@+id/view_featured_article_card_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/view_featured_article_card_header">

        <org.wikipedia.views.WikiArticleCardView
            android:id="@+id/view_wiki_article_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </org.wikipedia.views.WikiCardView>

    <org.wikipedia.feed.view.CardFooterView
        android:id="@+id/view_featured_article_card_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/view_featured_article_card_content_container" />

</androidx.constraintlayout.widget.ConstraintLayout>