<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_onboarding_pager_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="?attr/border_color" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fragment_onboarding_skip_button"
                style="@style/App.Button.Text.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_skip" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/view_onboarding_page_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:tabIndicator="@null"
                app:tabRippleColor="?attr/placeholder_color"
                app:tabPaddingStart="8dp"
                app:tabPaddingEnd="8dp"
                app:tabBackground="@drawable/shape_tab_dot"
                app:tabGravity="center" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical">

                <Button
                    android:id="@+id/fragment_onboarding_forward_button"
                    style="@style/App.Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/onboarding_continue" />

                <Button
                    android:id="@+id/fragment_onboarding_done_button"
                    style="@style/App.Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/onboarding_get_started" />

            </FrameLayout>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>