...

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint">
            <org.wikipedia.views.PlainPasteEditText
                    android:id="@+id/login_username_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:textAppearanceMedium"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.PasswordTextInput
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/login_password_hint" />

...
                android:imeOptions="flagNoExtractUi"
                android:maxLines="1"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:id="@+id/login_button"
                style="@style/ButtonProgressive"
                android:text="@string/menu_login"
                android:enabled="false"
                />

        <TextView
...
