<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_results_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <org.wikipedia.views.WikiErrorView
        android:id="@+id/search_error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone"
        tools:visibility="visible"/>

</FrameLayout>
